--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -70,11 +70,9 @@ textarea {
    ========================================================================== */
 
 @media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-
-}
+(-o-min-device-pixel-ratio: 5/4),
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 120dpi) {}
 
 /* ==========================================================================
    Helper classes
@@ -129,6 +127,7 @@ textarea {
    ========================================================================== */
 
 @media print {
+
     *,
     *:before,
     *:after {
@@ -144,11 +143,11 @@ textarea {
     }
 
     a[href]:after {
-        content: " (" attr(href) ")";
+        content: " ("attr(href) ")";
     }
 
     abbr[title]:after {
-        content: " (" attr(title) ")";
+        content: " ("attr(title) ")";
     }
 
     a[href^="#"]:after,
